--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -3,12 +3,12 @@ nodaemon=true
 logfile=/app/logs/supervisord.log
 pidfile=/tmp/supervisord.pid
 
-[program:vllm]
-command=bash -c "vllm serve autumncc/Qwen2.5-VL-7B-VRAG --port 8001 --host 0.0.0.0 --limit-mm-per-prompt image=10 --served-model-name Qwen/Qwen2.5-VL-7B-Instruct"
-stdout_logfile=/app/logs/vllm.log
-stderr_logfile=/app/logs/vllm.log
-autostart=true
-autorestart=true
+# [program:vllm]
+# command=bash -c "vllm serve autumncc/Qwen2.5-VL-7B-VRAG --port 8001 --host 0.0.0.0 --limit-mm-per-prompt image=10 --served-model-name Qwen/Qwen2.5-VL-7B-Instruct"
+# stdout_logfile=/app/logs/vllm.log
+# stderr_logfile=/app/logs/vllm.log
+# autostart=true
+# autorestart=true
 
 [program:search_engine]
 command=python3 search_engine/search_engine_api.py
@@ -18,7 +18,7 @@ autostart=true
 autorestart=true
 
 [program:streamlit]
-command=streamlit run demo/app.py
+command=streamlit run demo/app.py --server.address 0.0.0.0
 stdout_logfile=/app/logs/streamlit.log
 stderr_logfile=/app/logs/streamlit.log
 autostart=true
